<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">FRConnect</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tasklist">Tasklist</string>
    <string name="contact">Contact</string>
    <string name="faq">FAQ</string>
    <string name="howto">How to Connect to the Robot</string>
    <string name="a">Reset the IP to 10.xx.yy.13/n where xx are the first two digits of your team number and yy are the last two.</string>
    <string name="b">Set up the router on the robot</string>
    <string name="c">Connect to the network for the router</string>
    <string name="d">Load code</string>
    <string name="e">Open up driver station</string>
    <string name="f">Press "Enable"</string>
    <string name="one">1. </string>
    <string name="two">2. </string>
    <string name="three">3. </string>
    <string name="four">4. </string>
    <string name="five">5. </string>
    <string name="six">6. </string>
    <color android:id="@+id/color1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="backgroundcolor">#CC0000</color>
    <color android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/color1" name="textcolor">#ffffff</color>

</resources>
