<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="25"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/howto"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/editText2"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@string/one"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:typeface="monospace" />

            <EditText
      		    android:id="@+id/editText3"
      		    android:layout_width="wrap_content"
      		     android:layout_height="wrap_content"
      		    android:ems="15"
      		    android:inputType="text|textMultiLine"
      		    android:text="@string/a"
      		    android:textColor="@color/textcolor"
      		    android:textSize="16sp"
      		    android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/editText4"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@string/two"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:typeface="monospace" />

            <EditText
      		    android:id="@+id/editText5"
      		    android:layout_width="wrap_content"
      		     android:layout_height="wrap_content"
      		    android:ems="15"
      		    android:inputType="text|textMultiLine"
      		    android:text="@string/b"
      		    android:textColor="@color/textcolor"
      		    android:textSize="16sp"
      		    android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/editText6"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@string/three"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:typeface="monospace" />

            <EditText
      		    android:id="@+id/editText7"
      		    android:layout_width="wrap_content"
      		     android:layout_height="wrap_content"
      		    android:ems="15"
      		    android:inputType="text|textMultiLine"
      		    android:text="@string/c"
      		    android:textColor="@color/textcolor"
      		    android:textSize="16sp"
      		    android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/editText8"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@string/four"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:typeface="monospace" />

            <EditText
      		    android:id="@+id/editText9"
      		    android:layout_width="wrap_content"
      		     android:layout_height="wrap_content"
      		    android:ems="15"
      		    android:inputType="text|textMultiLine"
      		    android:text="@string/d"
      		    android:textColor="@color/textcolor"
      		    android:textSize="16sp"
      		    android:typeface="monospace" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/editText10"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@string/five"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:typeface="monospace" />

            <EditText
      		    android:id="@+id/editText11"
      		    android:layout_width="wrap_content"
      		     android:layout_height="wrap_content"
      		    android:ems="15"
      		    android:inputType="text|textMultiLine"
      		    android:text="@string/e"
      		    android:textColor="@color/textcolor"
      		    android:textSize="16sp"
      		    android:typeface="monospace" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/editText12"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@string/six"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:typeface="monospace" />

            <EditText
      		    android:id="@+id/editText13"
      		    android:layout_width="wrap_content"
      		     android:layout_height="wrap_content"
      		    android:ems="15"
      		    android:inputType="text|textMultiLine"
      		    android:text="@string/f"
      		    android:textColor="@color/textcolor"
      		    android:textSize="16sp"
      		    android:typeface="monospace" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
